2002-01-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextlib_la_LDFLAGS): Add -lc. Needed on AIX.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	* wait-process.c (WIFSIGNALED): Make it return false when WIFSTOPPED
	returns true.
	(wait_subprocess): Use WIFSIGNALED instead of WCOREDUMP || WTERMSIG.
	On AIX and OSF/1, WTERMSIG has a negative value if !WIFSIGNALED. And
	WCOREDUMP is a BSDism, not POSIX.

2001-12-23  Bruno Haible  <bruno@clisp.org>

	* xsetenv.h: New file.
	* xsetenv.c: New file.
	* Makefile.am (libgettextlib_la_SOURCES): Add them.
	* classpath.c (set_classpath): Use xsetenv instead of setenv.
	(reset_classpath): Likewise.
	* javacomp.c (compile_java_class): Likewise.
	* javaexec.c (execute_java_class): Likewise.

2001-12-23  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextlib_la_SOURCES): Add the contents of
	libgettextlib_la_HEADER, except liballoca.h.
	(LIBADD_SOURCE): Add the contents of LIBADD_HEADER, plus liballoca.h.
	(UNUSED_SOURCE): Add the contents of UNUSED_HEADER.
	(libgettextlib_la_HEADER, LIBADD_HEADER, UNUSED_HEADER): Remove
	variables.
	(noinst_HEADERS): Update.

2001-12-21  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (ISSLASH): Provide definition for DOS-like systems.
	* basename.c (FILESYSTEM_PREFIX_LEN, ISSLASH): Likewise.

2001-12-22  Bruno Haible  <bruno@clisp.org>

	* binary-io.h: New file, extracted from system.h.
	* exit.h: New file, extracted from system.h.
	* liballoca.h: New file, extracted from system.h.
	* pathname.h: New file, extracted from system.h.
	* stpcpy.h: New file, extracted from system.h.
	* stpncpy.h: New file, extracted from system.h.
	* strcase.h: New file, extracted from system.h.
	* xgetcwd.h: New file, extracted from system.h.
	* system.h: Remove file.
	* Makefile.am (libgettextlib_la_SOURCES): Remove xgetcwd.c.
	(libgettextlib_la_HEADER): Add binary-io.h, exit.h, liballoca.h,
	pathname.h. Remove system.h.
	(LIBADD_HEADER): Add stpcpy.h, stpncpy.h, strcase.h.