@@ -1,5 +1,5 @@
 /* Setting environment variables, with out-of-memory checking.
-   Copyright (C) 2001 Free Software Foundation, Inc.
+   Copyright (C) 2001-2002 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -18,7 +18,15 @@
 /* Get unsetenv().  It can be used without error checking.  */
 #include "setenv.h"
 
+#ifdef	__cplusplus
+extern "C" {
+#endif
+
 /* Set NAME to VALUE in the environment.
    If REPLACE is nonzero, overwrite an existing value.
    With error checking.  */
 extern void xsetenv PARAMS ((const char *name, const char *value, int replace));
+
+#ifdef	__cplusplus
+}
+#endif
