@@ -1,3 +1,8 @@
+2002-01-09  Bruno Haible  <bruno@clisp.org>
+
+	* setenv.h: Make it possible to include this file from C++.
+	* xsetenv.h: Likewise.
+
 2002-01-05  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (libgettextlib_la_LDFLAGS): Add -lc. Needed on AIX.
